fix(styles): Adjust layout dimensions and spacing for improved design consistency

--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,8 @@ body {
   box-shadow: 0 4px 12px hsla(0, 0%, 0%, 0.1);
   width: 90%;
   max-width: 500px;
-  height: 900px;
-  margin-top: 60px;
+  height: 860px;
+  margin-block: 60px;
   text-align: center;
   position: relative;
 }
@@ -48,9 +48,9 @@ body {
 .content-container {
   display: flex;
   width: 100%;
-  margin-top: 200px;
+  margin-top: 190px;
   justify-content: center;
-  padding: 10px;
+  padding: 12px;
 }
 
 .profile {
@@ -69,11 +69,12 @@ body {
 h1 {
   font-size: 24px;
   width: 100%;
+  margin-block: 10px;
 }
 
 p {
   color: #9f9d9d;
-  margin-top: -5px;
+  margin-block: 10px;
   margin-inline: auto;
   width: 80%;
 }
@@ -82,8 +83,8 @@ p {
   display: flex;
   width: 100%;
   flex-direction: column;
-  gap: 14px;
-  margin-top: 120px;
+  gap: 20px;
+  margin-top: 80px;
   position: relative;
   z-index: 1;
 }
@@ -154,15 +155,15 @@ p {
   width: 100%;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 20px;
-  gap: 8px;
+  gap: 0;
   position: relative;
 }
 
 .upcoming-event-header {
   position: relative;
-  width: fit-content;
-  margin-top: -1px;
+  width: 100%;
+  margin-top: 12px;
+  padding: 0;
   font-weight: 500;
   color: #ffffff;
   font-size: 18px;
@@ -172,7 +173,7 @@ p {
   position: relative;
   margin-top: -10px;
   width: 100%;
-  height: 90px;
+  height: 60px;
   background-color: #00000099;
 }
 
@@ -180,7 +181,8 @@ p {
   position: absolute;
   width: 97%;
   height: fit-content;
-  top: 7px;
+  height: 60px;
+  top: -6px;
   left: 5px;
   overflow: hidden;
 }
@@ -188,7 +190,6 @@ p {
 .marquee-list {
   display: flex;
   width: max-content;
-  padding: 0;
   align-items: center;
   gap: 30px;
   position: relative;
